# e01-rs

./: Cargo.toml  README.md  TODO  build.rs  cbindgen.toml
.world/: build.sh  config.sh  install.sh  setup.sh
c_api/: c_api.h  test.cpp
data/: bad_chunk.E01  image.E01  mimage.E01  mimage.E02
ksy/: ewf_digest_section.ksy  ewf_file_header_v1.ksy  ewf_file_header_v2.ksy  ewf_hash_section.ksy  ewf_section_descriptor_v1.ksy  ewf_section_descriptor_v2.ksy  ewf_table_header.ksy  ewf_volume.ksy  ewf_volume_smart.ksy
ksy/pre-generated/: ewf_digest_section.rs  ewf_file_header_v1.rs  ewf_file_header_v2.rs  ewf_hash_section.rs  ewf_section_descriptor_v1.rs  ewf_section_descriptor_v2.rs  ewf_table_header.rs  ewf_volume.rs  ewf_volume_smart.rs
src/: bytessource.rs  c_api.rs  cache.rs  cachereadseek.rs  cacheworkersource.rs  capi.rs  checksum.rs  dummycache.rs  e01_reader.rs  error.rs  filefoyercache.rs  filesource.rs  foyercache.rs  hasher.rs  kerror_wrapper.rs  lib.rs  main.rs  placeholdersource.rs  readworker.rs  s3source.rs  sec_read.rs  seg_path.rs  segment.rs  test_data.rs  test_helper.rs  workersource.rs
tools/: everify.py  test.bat
