[package]
name = "e01-rs"
version = "0.1.0"
authors = ["Aon"]
edition = "2021"

[profile.release]
debug = false
lto = true

[lib]
name = "e01"
path = "src/lib.rs"

[[bin]]
name = "e01verify"
path = "src/main.rs"

[features]
capi = []

[dependencies]
adler32 = "1.2"
byteorder = "1.5"
clap = { version = "4.5", features = ["derive"] }
digest = "0.10.7"
flate2 = { version = "1", features = ["zlib-rs"] }
glob = "0.3"
hex = "0.4"
itertools = "0.14.0"
kaitai = { git = "https://github.com/kaitai-io/kaitai_struct_rust_runtime.git", branch = "master" }
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
simd-adler32 = "0.3"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }

[dev-dependencies]
const_format = "0.2"
hex = "0.4"
rand = "0.9"
