[package]
name = "e01-rs"
version = "0.1.0"
authors = ["Aon"]
edition = "2021"

[profile.release]
debug = false
lto = true

[lib]
name = "e01"
path = "src/lib.rs"

[[bin]]
name = "e01verify"
path = "src/main.rs"

[features]
capi = []

[dependencies]
flate2 = "^1"
byteorder = "^1.5"
kaitai = { git = "https://github.com/kaitai-io/kaitai_struct_rust_runtime.git", branch = "master" }
sha1 = "^0.10"
sha2 = "^0.10"
md-5 = "^0.10"
glob = "^0.3"
adler32 = "^1.2"
rand = "^0.9"
clap = { version = "^4.5", features = ["derive"] }
hex = "^0.4"
thiserror = "2.0.12"
itertools = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
digest = "0.10.7"

[dev-dependencies]
hex = "^0.4"
