[package]
name = "e01-rs"
version = "0.1.0"
authors = ["LevelBlue"]
edition = "2024"

[profile.release]
debug = false
lto = true

[lib]
name = "e01"
path = "src/lib.rs"

[[bin]]
name = "e01verify"
path = "src/main.rs"

[features]
capi = []

[dependencies]
adler32 = "1.2"
async-trait = "0.1.89"
byteorder = "1.5"
bytesize = "2.3.1"
clap = { version = "4.5", features = ["derive"] }
digest = "0.10.7"
flate2 = { version = "1", features = ["zlib-rs"] }
foyer = { version = "0.22", features = [ "serde" ] }
foyer-common = "0.22"
futures = "0.3.31"
glob = "0.3"
hex = "0.4"
itertools = "0.14.0"
#kaitai = { git = "https://github.com/kaitai-io/kaitai_struct_rust_runtime.git", branch = "master" }
kaitai = { git = "https://github.com/uckelman-sf/kaitai_struct_rust_runtime.git", branch = "master" }
md-5 = "0.10"
rayon = "1.11.0"
#rust-s3 = "0.37.0"
rust-s3 = { git = "https://github.com/uckelman-sf/rust-s3.git", branch = "master" }
sha1 = "0.10"
sha2 = "0.10"
simd-adler32 = "0.3"
tempfile = "3.23.0"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["io-util", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
url = "2.5.7"

[dev-dependencies]
const_format = "0.2"
rand = "0.9"
test-log = { version = "0.2.18", default-features = false, features = ["trace"] }
